--- a/MyBlogDefence/Views/Article/Delete.cshtml
+++ b/MyBlogDefence/Views/Article/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlogDefence.Models.Article
+﻿@model MyBlogDefence.Models.ArticleViewModel
 
 @{
     ViewBag.Title = "Delete";
@@ -23,6 +23,15 @@
                     @Html.TextAreaFor(m => m.Content, new { @class = "form-control", @readonly = "readonly", @rows = "7" })
                 </div>
             </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.CategoryId, new { @class = "control-label col-sm-4" })
+                <div class="dropdown col-sm-4">
+                    @Html.DropDownListFor(m => m.CategoryId,
+                        new SelectList(Model.Categories, "Id", "Name", Model.CategoryId),
+                        new { @class = "btn btn-info col-sm-12" ,@readonly = "readonly" })
+                </div>
+            </div>
+
 
             <div class="form-group">
                 <div class="col-sm-4 col-sm-offset-4">
