--- a/MyBlogDefence/Views/Article/Delete.cshtml
+++ b/MyBlogDefence/Views/Article/Delete.cshtml
@@ -24,13 +24,19 @@
                 </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.CategoryId, new { @class = "control-label col-sm-4" })
-                <div class="dropdown col-sm-4">
-                    @Html.DropDownListFor(m => m.CategoryId,
-                        new SelectList(Model.Categories, "Id", "Name", Model.CategoryId),
-                        new { @class = "btn btn-info col-sm-12" ,@readonly = "readonly" })
+                @Html.LabelFor(m => m.Category, new { @class = "control-label col-sm-4" })
+                <div class="col-sm-4">
+                    @Html.TextBoxFor(m => m.Category.Name, new { @class = "form-control", @readonly = "readonly" })
                 </div>
             </div>
+
+            <div class="form-group">
+                @Html.LabelFor(m => m.Tags, new { @class = "control-label col-sm-4" })
+                <div class="col-sm-4">
+                    @Html.TextBox("tagsString", (object)ViewBag.TagsString, new { @class = "form-control", @readonly = "readonly" })
+                </div>
+            </div>
+
 
 
             <div class="form-group">
